# multi_agent_Ai_support_assistant

./: .gitignore  CLAUDE.md  README.md  docker-compose.langfuse.yml  docker-compose.yml  example.env  pyproject.toml
adk_agents/: README.md  __init__.py  demo.py  guardrails.py  observability.py  runner.py  schemas.py
adk_agents/pagila_support/: __init__.py  agent.py  env.py  specialists.py  toolsets.py
app/: __init__.py  config.py
app/agents/: __init__.py  base.py  catalog.py  handoff.py  knowledge.py  registry.py  rentals.py  subscription.py  triage.py  util.py
app/api/: __init__.py  deps.py  main.py
app/api/routes/: adk_route.py  agent.py  agents_meta.py  capabilities.py  config_route.py  evals_route.py  handoffs.py  health.py  kb.py  sk_route.py  tools.py  triage.py
app/guardrails/: __init__.py  input_guard.py  output_guard.py
app/llm/: __init__.py  base.py  fake.py  litellm_client.py
app/mcp/: __init__.py  server.py
app/observability/: __init__.py  logging.py  tracing.py
app/orchestrator/: __init__.py  orchestrator.py  streaming.py
app/repository/: __init__.py  engine.py  queries.py
app/schemas/: __init__.py  contracts.py  tools.py
app/service/: __init__.py  catalog.py  handoff.py  kb.py  rentals.py  subscription.py
app/tools/: __init__.py  adapter.py  descriptors.py  registry.py
docs/: ai_usage.md  db_setup_commands.md  design.md  implementation_plan.md  understanding.md
evals/: __init__.py  __main__.py  cases.py  runner.py
graphify-out/: .graphify_labels.json  graph.html  graph.json  labels.json
kb/: account_and_signin.md  billing_and_refunds.md  payment_methods.md  streaming_and_devices.md
migrations/: env.py
migrations/versions/: 8aa820a28c1a_add_film_streaming_available.py  d309a0b6a0a4_create_streaming_subscription.py
problem_statement/: Netsol_Gen_AI_CoE_Take_Home_Assignment.docx
sk_agents/: README.md  __init__.py  demo.py  runner.py  schemas.py
sk_agents/pagila_support/: __init__.py  agent.py  guardrails.py  llm.py  mcp_plugin.py  specialists.py
tests/: conftest.py  test_adk_agents.py  test_adk_guardrails.py  test_adk_streaming.py  test_agents.py  test_api.py  test_guardrails.py  test_mcp_server.py  test_migrations.py  test_observability.py  test_service.py  test_sk_agents.py  test_sk_guardrails.py  test_streaming.py  test_tools.py  test_ui.py
web/: index.html  styles.css
web/js/: api.js  app.js  chat.js  dom.js  history.js  operator.js  state.js
